// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCustomModule should add the custom module defined 1`] = `
{
  "payload": {
    "lessons": undefined,
    "moduleCode": "CS1101S",
    "semester": 2,
    "title": {
      "classNo": "01",
      "day": "Monday",
      "endTime": "0900",
      "isCustom": true,
      "lessonType": "Lecture",
      "moduleCode": "CS1101S",
      "startTime": "0800",
      "title": "Programming Methodology",
      "venue": "COM1-0330",
      "weeks": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
      ],
    },
  },
  "type": "ADD_CUSTOM_MODULE",
}
`;

exports[`cancelModifyLesson should not have payload 1`] = `
{
  "payload": null,
  "type": "CANCEL_MODIFY_LESSON",
}
`;

exports[`changeLesson should return updated information to change lesson 1`] = `
{
  "payload": {
    "classNo": "1",
    "lessonType": "Recitation",
    "moduleCode": "CS1010S",
    "semester": 1,
  },
  "type": "CHANGE_LESSON",
}
`;

exports[`deleteCustomModule should modify the custom module 1`] = `
{
  "payload": {
    "moduleCode": "CS1101S",
    "semester": 2,
  },
  "type": "DELETE_CUSTOM_MODULE",
}
`;

exports[`fetchTimetableModules should fetch modules 1`] = `
[
  [
    [Function],
  ],
]
`;

exports[`hide/show timetable modules should dispatch a module code for hiding 1`] = `
{
  "payload": {
    "moduleCode": "CS1010",
    "semester": 1,
  },
  "type": "HIDE_LESSON_IN_TIMETABLE",
}
`;

exports[`hide/show timetable modules should dispatch a module code for showing 1`] = `
{
  "payload": {
    "moduleCode": "CS1020",
    "semester": 1,
  },
  "type": "SHOW_LESSON_IN_TIMETABLE",
}
`;

exports[`modifyCustomModule should modify the custom module 1`] = `
{
  "payload": {
    "lessons": undefined,
    "moduleCode": "CS2030",
    "oldModuleCode": "CS1101S",
    "semester": 2,
    "title": {
      "classNo": "01",
      "day": "Monday",
      "endTime": "0900",
      "isCustom": true,
      "lessonType": "Lecture",
      "moduleCode": "CS2030",
      "startTime": "0800",
      "title": "Programming Methodology",
      "venue": "COM1-0330",
      "weeks": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
      ],
    },
  },
  "type": "MODIFY_CUSTOM_MODULE",
}
`;

exports[`modifyLesson should return lesson payload 1`] = `
{
  "payload": {
    "activeLesson": {
      "classNo": "1",
      "colorIndex": 0,
      "day": "Wednesday",
      "endTime": "1200",
      "lessonType": "Lecture",
      "moduleCode": "CS1010S",
      "startTime": "1000",
      "title": "Programming Methodology",
      "venue": "LT26",
      "weeks": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
      ],
    },
  },
  "type": "MODIFY_LESSON",
}
`;

exports[`removeLesson should return information to remove module 1`] = `
{
  "payload": {
    "moduleCode": "CS1010",
    "semester": 1,
  },
  "type": "REMOVE_MODULE",
}
`;

exports[`select module color should dispatch a select of module color 1`] = `
{
  "payload": {
    "colorIndex": 0,
    "moduleCode": "CS1010S",
    "semester": 1,
  },
  "type": "SELECT_MODULE_COLOR",
}
`;

exports[`select module color should dispatch a select of module color 2`] = `
{
  "payload": {
    "colorIndex": 1,
    "moduleCode": "CS3216",
    "semester": 1,
  },
  "type": "SELECT_MODULE_COLOR",
}
`;
